--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Learn from the world's top 5 dentists in our exclusive 12-hour live masterclass. Transform your dental practice with cutting-edge techniques.">
     <meta name="keywords" content="dental webinar, dental masterclass, dental education, CE credits, dentist training">
-    <meta name="author" content="DentalMasters">
+    <meta name="author" content="Lt Dental Academy">
     
     <!-- Open Graph -->
-    <meta property="og:title" content="DentalMasters - Premium Dental Webinar Platform">
+    <meta property="og:title" content="Lt Dental Academy - Live Dental Training Sessions">
     <meta property="og:description" content="Join the world's top 5 dentists for an intensive 12-hour masterclass.">
     <meta property="og:type" content="website">
     
-    <title>DentalMasters - Premium Dental Webinar Platform</title>
+    <title>Lt Dental Academy - Live Dental Training Sessions</title>
   </head>
   <body>
     <div id="root"></div>
